# conda-tui

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  ascii-logo-80.txt  environment-dev.yml  environment.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pre-commit.yaml
conda.recipe/: meta.yaml
conda_tui/: app.py  environment.py  package.py  table.py
conda_tui/resources/: ascii-logo-80.txt
docs/: Makefile  docs-environment.yml
docs/source/: conf.py  index.md
etc/: build-environment.yml  pre-commit-environment.yml  publish-environment.yml  test-environment.yml
snippets/: env_list.py  pkg_list.py
src/conda_tui/: __init__.py  __main__.py  app.py  environment.py  footer.py  header.py  package.py  screens.py  styles.css  table.py
src/conda_tui/resources/: ascii-logo-80.txt
src/conda_tui/widgets/: __init__.py  environments.py  footer.py  header.py  logo.py  progress.py  table.py
tests/: test_smoke.py
