[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm[toml]>=6.2"]

[project]
dependencies = ["textual"]
description = "A Text User Interface for conda"
dynamic = ["version"]
license = {text = "BSD-3-Clause"}
name = "conda-tui"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "tox",
]

[tool.setuptools_scm]
write_to = "src/conda_tui/_version.py"

[tool.isort]
force_single_line = true
profile = "black"
