[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm[toml]>=6.2"]

[project]
dependencies = ["textual<0.32"]
description = "A Text User Interface for conda"
dynamic = ["version"]
license = {text = "BSD-3-Clause"}
name = "conda-tui"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "textual-dev",
  "tox"
]

[project.scripts]
conda-tui = "conda_tui.app:CondaTUI"

[tool.isort]
force_single_line = true
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
files = [
  "src/**/*.py"
]
python_version = "3.9"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "conda.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "textual.*"

[tool.setuptools_scm]
write_to = "src/conda_tui/_version.py"
