[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm[toml]>=6.2"]

[project]
dependencies = ["textual>=0.32,<0.33"]
description = "A Text User Interface for conda"
dynamic = ["version"]
license = {text = "BSD-3-Clause"}
name = "conda-tui"
readme = "README.md"
requires-python = ">=3.9"

[project.entry-points.conda]
tui = "conda_tui.app"

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "textual-dev",
  "tox"
]

[project.scripts]
conda-tui = "conda_tui.app:run"

[tool.isort]
force_single_line = true
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
files = [
  "src/**/*.py"
]
python_version = "3.9"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "conda.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "textual.*"

[tool.setuptools_scm]
write_to = "src/conda_tui/_version.py"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311
isolated_build = True
requires = tox-conda

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
deps =
    pytest
conda_deps =
    conda >=22.11.0
conda_channels =
    conda-forge
commands = pytest
"""
